trying to get the azure client to work

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+     <script type="javascript/text" src="azure-storage.blob.js" >
+     </script>
+
      <title>Sink Portal</title>
 </head>
 <body>
